--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "npx vite build --watch",
     "build": "npx vite build && cd scripts && sh build.sh",
     "host": "cd scripts && sh host.sh",
+    "deploy": "cd scripts && sh deploy.sh",
     "update:pocketpages": "cd scripts && sh update-pocketpages.sh",
     "update:pocketbase": "cd scripts && sh update-pocketbase.sh"
   },
@@ -14,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@samkirkland/ftp-deploy": "^1.2.4",
     "pocketbase": "^0.25.1",
     "pocketpages": "^0.15.5",
     "preact": "^10.26.3",
