--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "setup": "cd scripts && sh setup.sh",
-    "dev": "npx vite build --watch",
+    "dev": "./pocketbase meta appURL=\"127.0.0.1:8090\" && ./pocketbase serve --http=\"127.0.0.1:8090\" --hooksWatch=true & npx vite build --watch",
     "build": "npx vite build && cd scripts && sh build.sh",
     "host": "cd scripts && sh host.sh",
     "deploy": "cd scripts && sh deploy.sh",
