--- a/package.json
+++ b/package.json
@@ -1,27 +1,18 @@
 {
-  "name": "ivy-stack",
+  "name": "ivy242-starter",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "setup": "cd scripts && sh setup.sh",
-    "dev": "./pocketbase meta appURL=\"127.0.0.1:8090\" && ./pocketbase serve --http=\"127.0.0.1:8090\" --hooksWatch=true & npx vite build --watch",
-    "build": "npx vite build && cd scripts && sh build.sh",
-    "host": "cd scripts && sh host.sh",
-    "deploy": "cd scripts && sh deploy.sh",
+    "setup": "npm run setup -w scripts",
+    "dev": "npm run dev -w scripts",
+    "build": "npm run build -w scripts",
+    "preview": "npm run preview -w scripts",
+    "deploy": "npm run deploy -w scripts",
     "update:pocketbase": "cd scripts && sh update-pocketbase.sh"
   },
-  "author": "",
+  "workspaces": ["client", "server", "scripts"],
+  "author": "contact@ivy242.net",
+  "bin": "scripts/bin.js",
   "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "@samkirkland/ftp-deploy": "^1.2.4",
-    "pocketbase": "^0.25.1",
-    "pocketpages": "^0.15.5",
-    "preact": "^10.26.3",
-    "preact-custom-element": "^4.3.0"
-  },
-  "devDependencies": {
-    "@preact/preset-vite": "^2.10.1",
-    "vite": "^6.1.0"
-  }
+  "description": ""
 }
